# udata-event-consumer

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  bumpr.rc  pyproject.toml  setup.cfg  tasks.py
.circleci/: config.yml
tests/: conftest.py  test_consumer.py
udata_event_consumer/: __init__.py  consumer.py
udata_event_consumer/dataset/: event.py
